--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <!-- Site logo, replace with your own -->
-      <a href="index.html"><img src="img/logo.svg" alt="HTML Logo (replace this)"></a>
+      <a href="index.html"><img src="img/logo.png" alt="HTML Logo (replace this)"></a>
 
       <!-- Navigation menu and toggle button (non-functional) -->
       <nav aria-label="Primary">
