--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document title</title>
+    <title>U - Glasses</title>
     <meta name="description" content="[A short description]">
     <meta name="author" content="Mani Rezaeian">
     <link rel="stylesheet" href="css/reset.css"> <!-- You may change this "Reset" to "Normalize" if preferred -->
@@ -13,7 +13,15 @@
   <body>
     <header>
       <!-- Site logo, replace with your own -->
-      <a href="index.html"><img src="img/logo.png" alt="HTML Logo (replace this)"></a>
+      <a href="index.html"><img src="img/logo.svg" alt="U-Sunglasses"></a>
+
+      <!-- Search for a product (non-functional) -->
+      <form>
+        <label>
+          <input type="search" name="find" id="find">
+        </label>
+        <button type="button"><span class="material-icons">search</span></button>
+      </form>
 
       <!-- Navigation menu and toggle button (non-functional) -->
       <nav aria-label="Primary">
@@ -21,26 +29,19 @@
           <span class="material-icons">menu</span>
         </button>
         <ul>
-          <li><a href="#">Category</a>
+          <li><a href="#">Women</a>
             <ul>
-              <li><a href="#">Subcategory</a></li>
-              <li><a href="#">Subcategory</a></li>
-              <li><a href="#">Subcategory</a></li>
+              <li><a href="#">Eyeglsses</a></li>
+              <li><a href="#">Sunglasses</a></li>
             </ul>
           </li>
-          <li><a href="#">Category</a></li>
-          <li><a href="#">Category</a></li>
-          <li><a href="#">Category</a></li>
+          <li><a href="#">Men</a></li>
+          <li><a href="#">Unisex</a></li>
+          <li><a href="#">Kids</a></li>
         </ul>
       </nav>
 
-      <!-- Search for a product (non-functional) -->
-      <form>
-        <label>Search
-          <input type="search" name="find" id="find">
-        </label>
-        <button type="button"><span class="material-icons">search</span></button>
-      </form>
+      
 
       <!-- Additional nav links -->
 
@@ -123,7 +124,7 @@
         <!-- Product 1 -->
         <article>
           <header>
-            <img src="img/product.jpg" alt="Product Image">
+            <img src="img/product1.jpg" alt="Product Image">
           </header>
           <h3>Product Name</h3>
           <p>Here is a shot of this product that might entice a user to click and add it to their cart.</p>
@@ -162,7 +163,7 @@
         <!-- Product 2 -->
         <article>
           <header>
-            <img src="img/product.jpg" alt="Product Image">
+            <img src="img/product2.jpg" alt="Product Image">
           </header>
           <h3>Product Name</h3>
           <p>Here is a shot of this product that might entice a user to click and add it to their cart.</p>
