--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <!-- Product 3 -->
         <article>
           <header>
-            <img src="img/product.jpg" alt="Product Image">
+            <img src="img/product3.jpg" alt="Product Image">
           </header>
           <h3>Product Name</h3>
           <p>Here is a shot of this product that might entice a user to click and add it to their cart.</p>
