--- a/index.html
+++ b/index.html
@@ -44,21 +44,34 @@
 
     <!-- Search for a product (non-functional) -->
 
+    <div>
     <img src="img/fabric.jpg" alt="" class="line">
+    </div>
 
     
-    
-    <form class="searchbox">
-      <label>Search<input type="search" name="find" id="find"></label>
+    <div class="search-container">
+    <form>
+      <label>
+       <input type="text" placeholder="Bike Model.." name="search">
+      </label>
+      <button class="searchbar" type="button">Search</button>
     </form>
+    </div>
     <!-- Additional nav links -->
+
+    <div>
+     <img src="img/downline.jpg" alt="" class="linedge">
+    </div>   
+  
 
   </header>
 
     <main>
       <header>
-        <h1 class="promotion">BUY ONE PAIR OF
-          SUNGLASSES & SAVE 75$ ON SECOND</h1>
+        <div>
+          <img src="img/upline.jpg" alt="" class="linedge">
+        </div>
+        <h1 class="promotion">BUY ONE BICYCLE AND WIN TWO BICAMP TICKETS</h1>
 
         <!-- Filtering product form -->
         <form>
