--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>
           <img src="img/upline.jpg" alt="" class="linedge">
         </div>
-        <h1 class="promotion">BUY ONE BICYCLE AND WIN TWO BICAMP TICKETS</h1>
+        <h1 class="promotion">BUY ONE BICYCLE AND WIN TWO BICAMP<span class="tm" ></span>TICKETS</h1>
 
         <!-- Filtering product form -->
         <form>
