--- a/index.html
+++ b/index.html
@@ -114,45 +114,18 @@
           <p>Tandem Bike Trade (1952)</p>
           <form>
               <footer>
-                <dl>
-                  <dt>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star1" value="1" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star2" value="2" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star3" value="3" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star4" value="4" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star5" value="5" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                  </dt>
-                </dl>
+                <div class="item">
+                  <input type="radio" name="star" id="one" value="1">
+                  <label class="star" for="one"></label>
+                  <input type="radio" name="star" id="two" value="2">
+                  <label class="star" for="two"></label>
+                  <input type="radio" name="star" id="three" value="3">
+                  <label class="star" for="three"></label>
+                  <input type="radio" name="star" id="four" value="4">
+                  <label class="star" for="four"></label>
+                  <input type="radio" name="star" id="five" value="5">
+                  <label class="star" for="five"></label>
+                </div>
                 <data class="redlabel" value="8"><ins>$8.00</ins></data>
                 <button class="addtocard" type="button">Add to Cart</button>
                 <label class="option">
