--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
           <form>
               <footer>
                 <div class="item">
-                  <input type="radio" name="star" id="one" value="1">
-                  <label class="star" for="one"></label>
-                  <input type="radio" name="star" id="two" value="2">
-                  <label class="star" for="two"></label>
-                  <input type="radio" name="star" id="three" value="3">
-                  <label class="star" for="three"></label>
-                  <input type="radio" name="star" id="four" value="4">
-                  <label class="star" for="four"></label>
-                  <input type="radio" name="star" id="five" value="5">
-                  <label class="star" for="five"></label>
+                  <input type="radio" name="star" id="one1" value="1">
+                  <label class="star" for="one1"></label>
+                  <input type="radio" name="star" id="two1" value="2">
+                  <label class="star" for="two1"></label>
+                  <input type="radio" name="star" id="three1" value="3">
+                  <label class="star" for="three1"></label>
+                  <input type="radio" name="star" id="four1" value="4">
+                  <label class="star" for="four1"></label>
+                  <input type="radio" name="star" id="five1" value="5">
+                  <label class="star" for="five1"></label>
                 </div>
                 <data class="redlabel" value="8"><ins>$8.00</ins></data>
                 <button class="addtocard" type="button">Add to Cart</button>
@@ -155,45 +155,18 @@
           <p>Made in Sweden 1984</p>
           <form>
               <footer>
-                <dl>
-                  <dt>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star1" value="1" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star2" value="2" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star3" value="3" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star4" value="4" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star5" value="5" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                  </dt>
-                </dl>
+                <div class="item">
+                  <input type="radio" name="star" id="one2" value="1">
+                  <label class="star" for="one2"></label>
+                  <input type="radio" name="star" id="two2" value="2">
+                  <label class="star" for="two2"></label>
+                  <input type="radio" name="star" id="three2" value="3">
+                  <label class="star" for="three2"></label>
+                  <input type="radio" name="star" id="four2" value="4">
+                  <label class="star" for="four2"></label>
+                  <input type="radio" name="star" id="five2" value="5">
+                  <label class="star" for="five2"></label>
+                </div>
                 <data class="redlabel" value="8"><ins>$8.00</ins></data>
                 <button class="addtocard" type="button">Add to Cart</button>
                 <label class="option">
@@ -223,45 +196,18 @@
           <p>Valentigny</p>
           <form>
               <footer>
-                <dl>
-                  <dt>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star1" value="1" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star2" value="2" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star3" value="3" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star4" value="4" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                    <span>
-                      <label class="option">
-                      <input type="checkbox" name="star5" value="5" >
-                      <span class="starunchecked"></span>
-                      <span class="redlabel"></span>
-                      </label>
-                    </span>
-                  </dt>
-                </dl>
+                <div class="item">
+                  <input type="radio" name="star" id="one3" value="1">
+                  <label class="star" for="one3"></label>
+                  <input type="radio" name="star" id="two3" value="2">
+                  <label class="star" for="two3"></label>
+                  <input type="radio" name="star" id="three3" value="3">
+                  <label class="star" for="three3"></label>
+                  <input type="radio" name="star" id="four3" value="4">
+                  <label class="star" for="four3"></label>
+                  <input type="radio" name="star" id="five3" value="5">
+                  <label class="star" for="five3"></label>
+                </div>
                 <data class="redlabel" value="8"><ins>$8.00</ins></data>
                 <button class="addtocard" type="button">Add to Cart</button>
                 <label class="option">
@@ -294,45 +240,18 @@
         <p>The Penny Farthing (1878)</p>
         <form>
             <footer>
-              <dl>
-                <dt>
-                  <span>
-                    <label class="option">
-                    <input type="checkbox" name="star1" value="1" >
-                    <span class="starunchecked"></span>
-                    <span class="redlabel"></span>
-                    </label>
-                  </span>
-                  <span>
-                    <label class="option">
-                    <input type="checkbox" name="star2" value="2" >
-                    <span class="starunchecked"></span>
-                    <span class="redlabel"></span>
-                    </label>
-                  </span>
-                  <span>
-                    <label class="option">
-                    <input type="checkbox" name="star3" value="3" >
-                    <span class="starunchecked"></span>
-                    <span class="redlabel"></span>
-                    </label>
-                  </span>
-                  <span>
-                    <label class="option">
-                    <input type="checkbox" name="star4" value="4" >
-                    <span class="starunchecked"></span>
-                    <span class="redlabel"></span>
-                    </label>
-                  </span>
-                  <span>
-                    <label class="option">
-                    <input type="checkbox" name="star5" value="5" >
-                    <span class="starunchecked"></span>
-                    <span class="redlabel"></span>
-                    </label>
-                  </span>
-                </dt>
-              </dl>
+              <div class="item">
+                <input type="radio" name="star" id="one5" value="1">
+                <label class="star" for="one5"></label>
+                <input type="radio" name="star" id="two5" value="2">
+                <label class="star" for="two5"></label>
+                <input type="radio" name="star" id="three5" value="3">
+                <label class="star" for="three5"></label>
+                <input type="radio" name="star" id="four5" value="4">
+                <label class="star" for="four5"></label>
+                <input type="radio" name="star" id="five5" value="5">
+                <label class="star" for="five5"></label>
+              </div>
               <data class="redlabel" value="8"><ins>$8.00</ins></data>
               <button class="addtocard" type="button">Add to Cart</button>
               <label class="option">
